<resources>
    <string name="app_name">Perfume_Manager</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!--Home nav-->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_nav__home">Nav_HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hate Mun</string>
    <string name="nav_header_subtitle">Holygansnt@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_nav__home_">Home</string>
    <string name="title_activity_nav__bottom_">Nav_Bottom_Activity</string>

    <string name="tvThongKe">Thống kê doanh thu</string>
    <string name="tvTopBanChay">Tổng doanh thu</string>
    <string name="title_product">Sản phẩm</string>
    <string name="title_bill">Hóa đơn</string>

    <string name="Product_messege_animotion">Login success</string>
    <string name="user_toolbar_title">Tài khoản người dùng</string>

    <!--Login Activity-->

    <string name="login_sign_up">SIGN UP</string>
    <string name="login_sign_with_fb">SIGN IN WITH FACEBOOK</string>
    <string name="login_sign_in">SIGN IN</string>
    <string name="login_password">Password</string>
    <string name="login_user">Username</string>
    <string name="error_empty_username">Yêu cầu nhập tài khoản !!!</string>
    <string name="error_empty_password">Yêu cầu nhập mật khẩu !!!</string>
    <string name="error_length_password">Mật khẩu dưới 6 ký tự !!!</string>
    <string name="error_wrong_username_password">Wrong Username or Password!</string>
    <string name="login_success_sign_in">Sign in success</string>

    <!--Create activity-->

    <string name="createuser_title">Registration</string>
    <string name="login_hint_username">Username</string>
    <string name="createuser_hint_password">Password</string>
    <string name="createuser_hint_password_re">Re-password</string>
    <string name="createuser_hint_fullname">Full name</string>
    <string name="createuser_hint_phone">Phone number</string>
    <string name="createuser_btn_add">Create</string>
    <string name="createuser_btn_cancel">Cancel</string>
    <string name="create_sign_in">Sign in</string>
    <string name="create_error_username">Không được để trống!</string>
    <string name="create_error_repassword">Mật khẩu không khớp!</string>
    <string name="create_error_length_username">Nhập tối thiểu 6 ký tự!</string>
    <string name="create_error_number_phone">Nhập vào phải là số!</string>
    <string name="create_message_success">Tạo tài khoản thành công v</string>

    <!--Product Activity-->

    <string name="product_title">List Perfume</string>
    <string name="tv_hint_search">Nhập từ khóa cần tìm</string>


</resources>
