<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ui.CreateUserActivity">

        <android.support.v7.widget.Toolbar

            android:id="@+id/toolbarCreateUser"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="?attr/actionBarSize">

        </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_below="@+id/toolbarCreateUser"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_menu_camera"
                />


                <EditText
                    android:layout_margin="5dp"
                    android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
                    android:drawablePadding="10dp"
                    android:id="@+id/edUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint_username" />



                <EditText
                    android:layout_margin="5dp"
                    android:drawableLeft="@drawable/ic_vpn_key_white_24dp"
                    android:drawablePadding="10dp"
                    android:id="@+id/edPassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/createuser_hint_password" />




                <EditText
                    android:layout_margin="5dp"
                    android:drawableLeft="@drawable/ic_vpn_key_white_24dp"
                    android:drawablePadding="10dp"
                    android:id="@+id/edRePassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/createuser_hint_password_re"/>

            <EditText
                android:layout_margin="5dp"
                android:drawableLeft="@drawable/ic_perm_contact_calendar_black_24dp"
                android:drawablePadding="10dp"
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/createuser_hint_fullname" />

                <EditText
                    android:layout_margin="5dp"
                    android:drawableLeft="@drawable/ic_phone_black_24dp"
                    android:drawablePadding="10dp"
                    android:id="@+id/edPhonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/createuser_hint_phone" />



            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_marginBottom="3dp"
                    android:id="@+id/btnAddUser"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_login"
                    android:text="@string/createuser_btn_add"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <Button
                    android:layout_marginBottom="3dp"
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_red"
                    android:text="@string/createuser_btn_cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="20dp"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:id="@+id/tvSignIn"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/create_sign_in"
                    />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>